# nwasm

./: LICENSE  cabal.project  example.wasm  example.wat  nwasm.cabal
src/: Main.hs
